# personal-time-tracker

./: README.md  TODO.md  pyproject.toml
src/server/: db.py  main.py
src/timetracker/server/: __init__.py  __main__.py  db.py  dependencies.py  main.py  utils.py
src/timetracker/server/routers/: __init__.py  time_entries.py  timesheet.py  tracking.py  work_items.py
static/: timer.js
templates/fragments/: layout.html  time_entry_form.html  time_table.html  work_item_form.html  work_item_options.html  work_item_table.html
templates/fragments/time_entry/: row.html  table.html
templates/fragments/timer/: not_running.html  running.html
templates/fragments/timesheet/: table.html
templates/fragments/work_items/: edit_form.html  table.html
templates/pages/: analytics.html  index.html  timesheet.html  track.html  work-items.html
