[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "timetracker"
version = "0.1.0"
description = "Personal time tracker."
authors = [
    {name = "Maxime Filippini", email="maxime.filippini@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "uvicorn", "fastapi", "jinja2"
]

[project.optional-dependencies]
dev = [
    "black", "pytest", 
]

[tool.setuptools.packages.find]
where = ["src"] 
include = ["timetracker"]  
exclude = [] 

[project.scripts]
run-server = "timetracker.server:run"

[tool.ruff]
select = ["E", "F", "ANN", "D", "TRY", "N"]
ignore = ["ANN101"]

[tool.ruff.pydocstyle]
convention = "google"  